Fix: Alignment of checkboxes and radios in product category edit page is a bit off.
Fixes issue 1193.

git-svn-id: https://wp-e-commerce.googlecode.com/svn/branches/3.8@2019 7bdd534d-2f5a-8b57-a18c-7e4837153298

--- a/wpsc-admin/css/admin.css
+++ b/wpsc-admin/css/admin.css
@@ -1792,6 +1792,7 @@ input.wpsc_cat_image_size {
 input.wpsc_cat_box {
     width:auto;
     margin:6px;
+    vertical-align:middle;
 }
 
 .wpsc_ie_field{
